<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">轻小说文库</string>
    <string name="version">( v0.5.1.0030 pre-release )</string>
    <string name="tab_library">轻小说文库</string>
    <string name="tab_bookshelf">本地书架</string>
    <string name="tab_wenku8">Wenku8.cn</string>
    <string name="tab_setting">设置</string>
    <string name="press_twice_to_exit"><b>退出请再抚摸一下返回键哦～</b>\n&lt;(=～￣▽￣)→)￣▽￣=)>o </string>
    <string name="top_new">最新入库榜</string>
    <string name="top_hit">热门点击榜</string>
    <string name="top_fav">热门收藏榜</string>
    <string name="view_full_list">查看完整榜单</string>
    <string name="view_all_list">查看所有榜单</string>
    <string name="view_more">查看更多</string>
    <string name="novel_name">小说名</string>
    <string name="novel_hit">点击量：</string>
    <string name="novel_push">推荐量：</string>
    <string name="novel_fav">收藏量：</string>
    <string name="zero">N/A</string>
    <string name="entry_name">入口名</string>
    <string name="search_novel">搜索轻小说</string>
    <string name="search_by_author">作者名</string>
    <string name="search_by_title">小说名</string>
    <string name="search_keyword">请输入搜索关键词</string>
    <string name="search">搜索：</string>
    <string name="search_result_none">没有搜索到符合条件的结果</string>
    <string name="search_ing">搜索中</string>
    <string name="search_fetching">正在获取：</string>
    <string name="search_delete_history_title">删除确认</string>
    <string name="search_delete_history_question">确定要删除所有搜索记录吗？</string>
    <string name="list_special">查看专题列表</string>
    <string name="postdate">最新入库</string>
    <string name="goodnum">总收藏榜</string>
    <string name="fullflag">完结列表</string>
    <string name="lastupdate">最近更新</string>
    <string name="allvisit">总排行榜</string>
    <string name="allvote">总推荐榜</string>
    <string name="monthvisit">月排行榜</string>
    <string name="monthvote">月推荐榜</string>
    <string name="weekvisit">周排行榜</string>
    <string name="weekvote">周推荐榜</string>
    <string name="dayvisit">日排行榜</string>
    <string name="dayvote">日推荐榜</string>
    <string name="size">字数排行</string>
    <string name="search_result">搜索结果</string>
    <string name="novel_writer">小说作者：</string>
    <string name="novel_press">出版文库：</string>
    <string name="novel_length">全文字数：</string>
    <string name="novel_author">小说作者：</string>
    <string name="novel_status">连载状态：</string>
    <string name="novel_latest">最新章节：</string>
    <string name="novel_status_0_sc">连载中</string>
    <string name="novel_status_1_sc">已完成</string>
    <string name="novel_status_0_tc">連載中</string>
    <string name="novel_status_1_tc">已完成</string>
    <string name="novel_update">最后更新：</string>
    <string name="novel_short_intro">剧情摘要：</string>
    <string name="novel_intro">剧情预览：</string>
    <string name="novel_cache">缓存小说</string>
    <string name="novel_add_to_shelf">加入本地书架</string>
    <string name="novel_added_to_shelf">已加入本地书架</string>
    <string name="novel_function">对本书的操作</string>
    <string name="novels_function">对所有书的操作</string>
    <string name="novel_force_reload">强制更新本地数据</string>
    <string name="novel_load">读取进度</string>
    <string name="novel_load_question">是否要从上次阅读的位置继续？</string>
    <string name="bookshelf_cache_all">下载/更新所有小说</string>
    <string name="bookshelf_statistics">本地书架信息统计</string>
    <string name="bookshelf_cache_one">下载/更新本书章节</string>
    <string name="bookshelf_force_reload_one">强制覆盖下载本书章节</string>
    <string name="bookshelf_remove">将该书移出书架</string>
    <string name="bookshelf_remove_confirm_title">移除确认</string>
    <string name="bookshelf_remove_confirm">确定将该书移出书架？</string>
    <string name="bookshelf_intro_load_failed">小说信息读取失败，此小说自动移出书架。</string>
    <string name="bookshelf_caching">正在缓存……</string>
    <string name="bookshelf_cached">缓存成功完成！</string>
    <string name="bookshelf_not_cached">未缓存，无法本地浏览。</string>
    <string name="bookshelf_sync_from_online">云端书架更新到本地</string>
    <string name="bookshelf_sync_to_online">本地书架更新到云端</string>
    <string name="bookshelf_sync_to_online_strict">清空云端、同步本地书架</string>
    <string name="bookshelf_all_book">所有小说</string>
    <string name="bookshelf_did_not_find_cache">没有发现小说缓存</string>
    <string name="bookshelf_want_to_connect_to_Internet">想要连接网络访问没有这个缓存的章节吗？</string>
    <string name="cancelled">操作已取消</string>
    <string name="load_status">载入状态</string>
    <string name="load_loading">载入中……</string>
    <string name="load_finished">全部载入完毕</string>
    <string name="network_error">连接服务器失败！\n\n可能的原因有：\n　　手机网络异常；\n　　服务器暂时无法响应请求；\n　　此时段请求服务器次数过多。</string>
    <string name="parse_failed">数据解析失败！\n\n可能的原因有：\n　　程序内部错误，请反馈给开发者；\n　　你修改了存储的数据。</string>
    <string name="in_building">建设中 orz</string>
    <string name="setting_unavailable">设置页面暂时不可用\n（建设中）</string>
    <string name="project_home">项目主页：\nhttp://L.mewx.org\n动态更新，欢迎反馈、\n本版本禁止发往应用商店！</string>
    <string name="about">关于</string>
    <string name="developer">开发者: MewX</string>
    <string name="resource_provider">数据库: Wenku8.cn</string>
    <string name="previous_chapter">上一章</string>
    <string name="next_chapter">下一章</string>
    <string name="user_cancelled">用户取消操作</string>

</resources>